# pylint-deprecated-decorator

./: .gitignore  .pre-commit-hook.yaml  .pre-commit-hooks.yaml  README.md  README.rst  pyproject.toml  requirements.txt  test.py  test.sh
deprecated_decorator/: __init__.py
pylint_deprecated_decorator/: deprecated_decorator.py
tests/: mocked_deprecated_decorator.py  test_pylint_deprecated_decorator.py
