[tool.poetry]
name = "pylint-deprecated-decorator"
version = "0.2.0"
description = "A pylint checker to detect @deprecated decorators on classes and functions"
authors = ["withakay <jack@fader.co.uk>"]

packages = [
    { include = "deprecated_decorator" },
]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
