[tool.poetry]
name = "pylint-deprecated-decorator"
version = "0.2.2"
description = "A pylint checker to detect @deprecated decorators on classes and functions"
authors = ["withakay <jack@fader.co.uk>"]
homepage = "https://github.com/withakay/pylint-deprecated-decorator#readme"
repository = "https://github.com/withakay/pylint-deprecated-decorator"

packages = [
    { include = "deprecated_decorator" },
    { include = "README.md" },
]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
